deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distcache
spec:
  replicas: 3
  selector:
    matchLabels:
      app: distcache
  template:
    metadata:
      labels:
        app: distcache
    spec:
      containers:
        - name: main-app
          image: distcache
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5001
          - containerPort: 7777
            protocol: "UDP"
            name: serfudp
          - containerPort: 7777
            protocol: "TCP"
            name: serftcp
        - name: sidecar-redis
          image: redis
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 6379
