deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: distcache-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: test.tester
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: distcache-svc
            port:
              number: 80
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name grpctest.dev.mydomain.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: distcache-security
    hosts:
      - test.tester
